--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "accepts": "^1.3.8",
-    "array-flatten": "^1.1.1",
     "append-field": "^1.0.0",
+    "array-flatten": "^1.1.1",
     "asynckit": "^0.4.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
@@ -15,8 +15,8 @@
     "buffer-equal-constant-time": "^1.0.1",
     "buffer-from": "^1.1.2",
     "busboy": "^1.6.0",
-    "call-bind": "^1.0.2",
     "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
     "combined-stream": "^1.0.8",
     "concat-stream": "^1.6.2",
     "content-disposition": "^0.5.4",
@@ -24,6 +24,7 @@
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
     "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "delayed-stream": "^1.0.0",
     "depd": "^2.0.0",
@@ -63,8 +64,8 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "minimist": "^1.2.8",
-    "mongodb": "^5.5.0",
     "mkdirp": "^0.5.6",
+    "mongodb": "^5.5.0",
     "mongodb-connection-string-url": "^2.6.0",
     "ms": "^2.0.0",
     "multer": "^1.4.5-lts.1",
@@ -112,7 +113,6 @@
     "xtend": "^4.0.2",
     "yallist": "^4.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
