--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_API="http://192.168.43.254:5000"
 
 NEXT_PUBLIC_ACCEPT_PAYMENT_API = "https://2pay.infomattic.com/init_payment.php"
+
+NEXT_PUBLIC_FRONTEND_URL="https://fortune-chest.vercel.app"
