--- a/bot/package.json
+++ b/bot/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "json2csv": "^6.0.0-alpha.2"
+  }
 }
