--- a/bot/package.json
+++ b/bot/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "image-type": "^5.2.0",
     "json2csv": "^6.0.0-alpha.2"
   }
 }
