--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API="http://192.168.43.254:5000"
+NEXT_PUBLIC_API="https://9203-117-234-246-9.ngrok-free.app"
 
 NEXT_PUBLIC_ACCEPT_PAYMENT_API = "https://2pay.infomattic.com/init_payment.php"
 
